@@ -1,0 +1,8 @@
+{
+    "parent": "block/slab_top",
+    "textures": {
+        "bottom": "stone_age:block/thatch",
+        "top": "stone_age:block/thatch",
+        "side": "stone_age:block/thatch"
+    }
+}
