@@ -1,0 +1,3 @@
+{
+    "parent": "stone_age:block/thatch_slab"
+}
